# usv_mavros_gui

./: CMakeLists.txt  CommandHomeSettings.qml  README.md  mapviewer.pro  mapviewer.qml  mapviewer.qrc  package.xml
doc/src/: mapviewer.qdoc
examples/: example.wps
forms/: Geocode.qml  GeocodeForm.ui.qml.autosave
include/: mapmavrospipe.h  waypointcontrol.h
map/: HomeMarker.qml  MapComponent.qml  MapSliders.qml  Marker.qml  MiniMap.qml  PolylineItem.qml
menus/: MainMenu.qml  MarkerPopupMenu.qml
resources/: transmitWaypoints.xcf
src/: main.cpp  mapmavrospipe.cpp  sendwaypoints_nogui.cpp  setActuators.cpp  usvCommandVel.cpp  usvSpeedTest.cpp  waypointcontrol.cpp
